--- a/sleepio/package.json
+++ b/sleepio/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^12.1.2"
+    "@testing-library/react": "^12.1.2",
+    "cors": "^2.8.5"
   }
 }
